observability/prometheus-stack/prometheus-stack-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring 
  annotations:
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: alb
  rules:
  - host: grafana.gondor.com.br
    http:
      paths:
      - backend:
          service:
            name: kube-prom-stack-grafana 
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific 
  - host: prometheus.gondor.com.br
    http:
      paths:
      - backend:
          service:
            name: kube-prom-stack-kube-prome-prometheus
            port:
              number: 9090
        path: /*
        pathType: ImplementationSpecific
